--- a/web/virtual_lab/templates/virtual_lab/layout.html
+++ b/web/virtual_lab/templates/virtual_lab/layout.html
@@ -14,17 +14,29 @@
         <nav class="space-x-8 text-gray-700 dark:text-gray-300">
           <!-- Home Link -->
           <a href="{% url 'virtual_lab:virtual_lab_home' %}"
-             class="hover:text-gray-900 dark:hover:text-white transition">{% trans "Home" %}</a>
+             class="hover:text-gray-900 dark:hover:text-white transition focus:text-gray-900 dark:focus:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300 dark:focus:ring-indigo-400 dark:focus:ring-offset-gray-800">{% trans "Home" %}</a>
           {% for subject in virtual_lab_subjects %}
-            <div class="relative group inline-block">
+            <div class="relative group inline-block"
+                 x-data="{ open: false }"
+                 @mouseenter="open = true"
+                 @mouseleave="open = false"
+                 @focusin="open = true"
+                 @focusout="if (!$el.contains($event.relatedTarget)) open = false">
               <a href="{% url subject.url_name %}"
-                 class="hover:text-gray-900 dark:hover:text-white transition focus:outline-none focus:ring-2 focus:ring-gray-500">
+                 id="subject-menu-button-{{ forloop.counter }}"
+                 :aria-expanded="open ? 'true' : 'false'"
+                 aria-controls="subject-menu-{{ forloop.counter }}"
+                 class="hover:text-gray-900 dark:hover:text-white transition focus:text-gray-900 dark:focus:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 dark:focus:ring-gray-300 dark:focus:ring-offset-gray-800">
                 {{ subject.label }}
               </a>
-              <div class="absolute left-0 top-full pt-1 w-56 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 transition pointer-events-none group-hover:pointer-events-auto group-focus-within:pointer-events-auto z-20">
+              <div id="subject-menu-{{ forloop.counter }}"
+                   aria-labelledby="subject-menu-button-{{ forloop.counter }}"
+                   class="absolute left-0 top-full pt-1 w-56 opacity-0 group-hover:opacity-100 group-focus-within:opacity-100 transition pointer-events-none group-hover:pointer-events-auto group-focus-within:pointer-events-auto z-20"
+                   :class="open ? 'opacity-100 pointer-events-auto' : 'opacity-0 pointer-events-none'">
                 <div class="bg-white dark:bg-gray-700 border border-gray-200 dark:border-gray-600 rounded-md shadow-lg">
                   {% for lab in subject.labs %}
                     <a href="{% url lab.url_name %}"
+                       :tabindex="open ? 0 : -1"
                        class="block px-4 py-2 text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-600 transition">{{ lab.label }}</a>
                   {% endfor %}
                 </div>
@@ -32,7 +44,7 @@
             </div>
           {% endfor %}
           <a href="{% url 'virtual_lab:code_editor' %}"
-             class="hover:text-gray-900 dark:hover:text-white transition">{% trans "Code Editor" %}</a>
+             class="hover:text-gray-900 dark:hover:text-white transition focus:text-gray-900 dark:focus:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-teal-300 dark:focus:ring-teal-400 dark:focus:ring-offset-gray-800">{% trans "Code Editor" %}</a>
         </nav>
       </div>
     </header>
